# pySDS

./: .gitignore  Changelog.md  README.md  SDSpy.md  build-upload.bat  doc-html.bat  doc-markdown.bat  doc.bat  generate_doc.bat  generate_doc.py  main.py  pyproject.toml
.github/workflows/: publish.yml  py.yml
SDSPy/: BaseOptionnalClass.py  __init__.py  command_place.md  main.py  pySDS.py
SDSPy/Autotest/: autotest.py
SDSPy/Files/: files.py
SDSPy/Maths/: maths.py
SDSPy/WGEN/: __init__.py  wgen.py
SDSPy/acquisition/: acquisition.py
SDSPy/channel/: channel.py
SDSPy/communication/: communication.py
SDSPy/counter/: counter.py
SDSPy/cursor/: cursor.py
SDSPy/decode/: __init__.py  decode.py
SDSPy/deprecated/: acal.py  (+1 more)
config/: 1002CML+.toml  1102X-HD.toml  1104X-E.toml  1104X-HD.toml  1104X-U.toml  1202X-HD.toml  1202X.toml  1204X-E.toml  1204X-HD.toml  2102X-Plus.toml  2104X-Plus.toml  2204X-HD.toml  2354X-HD.toml  3034X-HD.toml  3054X-HD.toml  3104X-HD.toml  5054X.toml  5104X.toml  6054A.toml  6054L.toml  6058L.toml  6104A.toml  6104L.toml  6108L.toml  6204A.toml  6204L.toml  6208L.toml  7304A-H12.toml  7404A-H12.toml  7604A-H12.toml  802X-HD.toml  804X-HD.toml  812X-HD.toml  814X-HD.toml  822X-HD.toml  824X-HD.toml  SDS824X-HD.toml  writter.py
documentation/: Compatibility.md  Documentation.md  command_place.md  search.js
examples/: 1. Openning.py  1.Openning.py  10. Export.py  2. SimpleConfigure.py  3. Maths.py  4. Trigger.py  5. Measures.py  6. Timebase.py  7. Cursors.py  8. Acquisition.py  9. Display.py
src/: command_place.md  main.py  pySDS.py
(+133 files in other folders)
